[gd_scene load_steps=12 format=2]

[ext_resource path="res://Chat.gd" type="Script" id=1]
[ext_resource path="res://PresenceLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/send-circle.svg" type="Texture" id=3]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/icons/tired.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/laughing.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/happy.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/smily.svg" type="Texture" id=8]
[ext_resource path="res://assets/icons/unknown.svg" type="Texture" id=9]
[ext_resource path="res://ReactionBtn.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Chat" type="Panel"]
anchor_left = 0.807
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 191.0
margin_bottom = 486.0
grow_vertical = 0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msgs" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 191.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListPlayersInRange" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 490.0
margin_right = 191.0
margin_bottom = 508.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresenceLabel" parent="VBoxContainer/ListPlayersInRange" instance=ExtResource( 2 )]
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 512.0
margin_right = 191.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
placeholder_text = "Write message..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendBtn" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 191.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true

[node name="is_typing_timer" type="Timer" parent="VBoxContainer/HBoxContainer"]
wait_time = 2.0
one_shot = true

[node name="ReactionsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 191.0
margin_bottom = 594.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyBtn" type="TextureButton" parent="VBoxContainer/ReactionsContainer"]
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 10 )
reaction = ":happy:"

[node name="SmilyBtn" type="TextureButton" parent="VBoxContainer/ReactionsContainer"]
margin_left = 38.0
margin_right = 76.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 10 )
reaction = ":smily:"

[node name="LaughingBtn" type="TextureButton" parent="VBoxContainer/ReactionsContainer"]
margin_left = 76.0
margin_right = 114.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
texture_normal = ExtResource( 6 )
expand = true
script = ExtResource( 10 )
reaction = ":laughing:"

[node name="ConfusedBtn" type="TextureButton" parent="VBoxContainer/ReactionsContainer"]
margin_left = 114.0
margin_right = 152.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 10 )
reaction = ":confused:"

[node name="BoredBtn" type="TextureButton" parent="VBoxContainer/ReactionsContainer"]
margin_left = 152.0
margin_right = 190.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 10 )
reaction = ":bored:"
